添加客服功能

--- a/pages/actReg/actRegManList/actRegManList.wxss
+++ b/pages/actReg/actRegManList/actRegManList.wxss
@@ -126,3 +126,20 @@ button.contentBottomChild::after{
     text-align:center;
     font-size:30rpx;
 }
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
+}
