--- a/pages/actReg/actRegUserInfo/actRegUserInfo.wxss
+++ b/pages/actReg/actRegUserInfo/actRegUserInfo.wxss
@@ -1,4 +1,7 @@
 @import '../../../utils/iconFont.wxss';
+page{
+    padding-bottom:20rpx;
+}
 .actRegUserWrap{
     width:710rpx;
     height:140rpx;
@@ -60,4 +63,23 @@
     width:650rpx;
     line-height:80rpx;
     margin-top:50rpx;
+}
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
+    margin-top:20rpx;
 }
