--- a/pages/actReg/actRegUserList/actRegUserList.wxss
+++ b/pages/actReg/actRegUserList/actRegUserList.wxss
@@ -1,10 +1,6 @@
 page{
   background:#f2f2f2;
-}
-.actRegWrap{
-    width:750rpx;
-    min-height:1207rpx;
-    background:#f2f2f2;
+  padding-bottom:20rpx;
 }
 .actRegContent{
     width:720rpx;
@@ -77,4 +73,21 @@ page{
     width:750rpx;
     height:20rpx;
     background:transparent;
+}
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
 }
