--- a/pages/collage/collageList/collageList.wxss
+++ b/pages/collage/collageList/collageList.wxss
@@ -53,12 +53,22 @@ page{
     text-align:center;
     font-weight:bold;
 }
-/* 更多数据 */
+/* 更多 */
 .moreData{
-    width:750rpx;
+    width:200rpx;
+    height:60rpx;
     font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
     color:#7b7b7b;
-    line-height:50rpx;
-    text-align:center;
+    background:#efefef;
     margin-top:20rpx;
 }
