--- a/pages/collectAct/collectActJoinerList/collectActJoinerList.wxss
+++ b/pages/collectAct/collectActJoinerList/collectActJoinerList.wxss
@@ -1,4 +1,7 @@
 @import '../../../utils/iconFont.wxss'; 
+page{
+    padding-bottom:20rpx;
+}
 .killPriceListContet{
     padding-top:20rpx;
     width:710rpx;
@@ -95,4 +98,21 @@
 }
 .price{
     color:#C41A16;
+}
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
 }
