--- a/pages/collectAct/collectActUserList/collectActUserList.wxml
+++ b/pages/collectAct/collectActUserList/collectActUserList.wxml
@@ -7,3 +7,5 @@
     </view>
     <view class='voteUserTitle'>{{item.title}}</view>
 </view>
+<!-- 更多 -->
+<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
