--- a/pages/collectAct/collectActUserList/collectActUserList.wxss
+++ b/pages/collectAct/collectActUserList/collectActUserList.wxss
@@ -1,6 +1,6 @@
 page{
     background:#F4F4F4;
-    padding-bottom:10rpx;
+    padding-bottom:20rpx;
 }
 .voteUserWrap{
     width:710rpx;
@@ -68,5 +68,24 @@ page{
     text-overflow:ellipsis;
 }
 view.voteUserWrap:nth-child(1){
+    margin-top:20rpx;
+}
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
     margin-top:20rpx;
 }
