--- a/pages/killPrices/killPricePerson/killPricePerson.wxml
+++ b/pages/killPrices/killPricePerson/killPricePerson.wxml
@@ -80,9 +80,10 @@
             <view class='contentTwo'>{{peopleData.joiner_nickname}}的好友,帮TA砍掉了￥<text>{{peopleData.total_reduce}}</text>元</view>
             <view class='contentThree' wx:for='{{peopleDataList}}' wx:key='{{index}}'>
                 <view><image mode='scaleToFill' src='{{item.avatar_url}}' /></view>
-                <view><text>{{item.nickname == ''?"访客":item.nickname}}</text><text>已砍掉￥{{item.reduce}}元</text></view>
+                <view><text>{{item.nickname == ''?"访客":item.nickname}}</text><text>已砍{{item.reduce}}元</text></view>
             </view>
-            <view class='moreData' hidden='{{isMore}}' bindtap='moreData'>更多...</view>
+            <!-- 更多 -->
+            <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
         </view>
     </view>
 </view>
