--- a/pages/videoClass/videoClassUserList/videoClassUserList.wxml
+++ b/pages/videoClass/videoClassUserList/videoClassUserList.wxml
@@ -46,7 +46,7 @@
         </view>
         <view class='classContentTitle'>{{item.title}}</view>
     </view>
-    <!-- 更多数据 -->
-    <view class='moreData' bindtap='moreData' hidden='{{isMore}}'>更多...</view>
+    <!-- 更多 -->
+    <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
 </view>
 <view class='addressList' bindtap='goManList'>＋</view>
