--- a/pages/videoVote/videoVoteStuList/videoVoteStuList.wxss
+++ b/pages/videoVote/videoVoteStuList/videoVoteStuList.wxss
@@ -86,13 +86,19 @@ view.voteUserWrap:nth-child(1){
     background:transparent;
 }
 /* 更多 */
-.activeInfoRankMore{
-    width:750rpx;
-    height:50rpx;
-    line-height:50rpx;
-    text-align:center;
-    color:#7b7b7b;
+.moreData{
+    width:200rpx;
+    height:60rpx;
     font-size:28rpx;
-    clear: both;
-    margin-top:20rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
 }
