--- a/pages/actReg/actRegUserList/actRegUserList.wxml
+++ b/pages/actReg/actRegUserList/actRegUserList.wxml
@@ -8,3 +8,6 @@
     </view>
     <view class='actRegRight'>截止:<text decode> {{item.end_time}}&nbsp;&nbsp;</text></view>
 </view>
+<!-- 更多 -->
+<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+
