--- a/pages/collage/collageList/collageList.wxml
+++ b/pages/collage/collageList/collageList.wxml
@@ -7,5 +7,5 @@
     </view>
     <view class='collageListBottom'>{{item.title}}</view>
 </view>
-<!-- 更多数据 -->
-<view class='moreData' bindtap='moreData' hidden='{{isMore}}'>更多...</view>
+<!-- 更多 -->
+<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
