--- a/pages/collage/collageUserList/collageUserList.wxml
+++ b/pages/collage/collageUserList/collageUserList.wxml
@@ -9,7 +9,8 @@
     </view>
 </view>
 <view class='noData' hidden='{{showTitle}}'>无记录</view>
-<view class='moreData' hidden='{{isMore}}' bindtap='moreData'>更多...</view>
+<!-- 更多 -->
+<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
 <view class='collageListWrap' hidden='{{isPersonInfo}}'>
     <view class='empty'></view>
     <view class='empty'></view>
