--- a/pages/collectAct/collectActJoinerList/collectActJoinerList.wxml
+++ b/pages/collectAct/collectActJoinerList/collectActJoinerList.wxml
@@ -1,4 +1,4 @@
-<view class='killPriceListContet' wx:for='{{pageData}}'>
+<view class='killPriceListContet' wx:for='{{pageData}}' wx:key='{{index}}'>
     <view class='killPriceListTop' bindtap='toActInfo' data-userid='{{item.id}}' >
         <text class='iconfont icon-ionc-- iconColor' decode='true'>&nbsp;&nbsp;{{item.nickname}}</text>
         <text>{{item.create_time}}</text>
@@ -8,6 +8,8 @@
         <text decode='true' data-index='{{index}}' bindtap='hiddenInfo' data-id='0'>.&nbsp;.&nbsp;.</text>
     </view>
 </view>
+<!-- 更多 -->
+<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
 <view class='noData' hidden='{{isNoData}}'>无记录</view>
 <view class='collageListWrap' hidden='{{isPersonInfo}}'>
     <view class='empty'></view>
