--- a/pages/collectAct/collectActManList/collectActManList.wxss
+++ b/pages/collectAct/collectActManList/collectActManList.wxss
@@ -125,12 +125,22 @@ page{
 .contentBottom>view:nth-child(2){
     color:#329ED3;
 }
-/* 更多数据 */
+/* 更多 */
 .moreData{
-    width:750rpx;
+    width:200rpx;
+    height:60rpx;
     font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
     color:#7b7b7b;
-    line-height:50rpx;
-    text-align:center;
+    background:#efefef;
     margin-top:20rpx;
 }
