--- a/pages/courses/course/course.wxss
+++ b/pages/courses/course/course.wxss
@@ -195,3 +195,22 @@ swiper {
 .courseClassBtn button:nth-child(1) {
     color: #7b7b7b;
 }
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
+    margin-top:20rpx;
+}
