--- a/pages/killPrices/killPriceInfo/killPriceInfo.wxml
+++ b/pages/killPrices/killPriceInfo/killPriceInfo.wxml
@@ -75,10 +75,12 @@
                     <view><image src='{{item.avatar_url}}' mode='scaleToFill' /></view>
                     <view>
                         <text>{{item.nickname}}</text>
-                        <text >已被砍掉￥{{item.reduce_price}}元></text>
+                        <text >已被砍{{item.reduce_price}}元></text>
+                        <!--  -->
                     </view>
                 </view>
-                <view class='moreData' hidden='{{isMore}}' bindtap='moreData'>更多...</view>
+                <!-- 更多 -->
+                <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
             </view>
             <!-- 玩法介绍 -->
             <view class='infoThreeContentTwo' hidden='{{isShow}}'>
