--- a/pages/killPrices/killUserInfo/killUserInfo.wxml
+++ b/pages/killPrices/killUserInfo/killUserInfo.wxml
@@ -10,7 +10,8 @@
         </view>
     </view>
     <view class='noData' hidden='{{showTitle}}'>无记录</view>
-    <view class='moreData' hidden='{{isMore}}' bindtap='moreData'>更多...</view>
+    <!-- 更多 -->
+    <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
 </view>
 <view class='collageListWrap' hidden='{{actReg}}'>
     <view class='empty'></view>
