--- a/pages/task/taskUserList/taskUserList.wxml
+++ b/pages/task/taskUserList/taskUserList.wxml
@@ -11,4 +11,6 @@
         <view bindtap='optToInfo' data-id='2' data-courseid='{{item.id}}' data-pwd='{{item.password}}' data-timestring='{{item.start_time}}' data-title='{{item.title}}'><text>打卡日历</text></view>
     </view>
 </view>
+<!-- 更多 -->
+<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
 
