--- a/pages/videoVote/videoVoteStuList/videoVoteStuList.wxml
+++ b/pages/videoVote/videoVoteStuList/videoVoteStuList.wxml
@@ -7,5 +7,5 @@
     </view>
     <view class='voteUserTitle'>{{item.title}}</view>
 </view>
-<view class='noData' hidden='{{showTitle}}'>无记录</view>
-<view class='activeInfoRankMore' bindtap='getMoreData' hidden='{{isMore}}'>更多...</view>
+<!-- 更多 -->
+<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
