--- a/pages/videoVote/videoVoteUserList/videoVoteUserList.wxss
+++ b/pages/videoVote/videoVoteUserList/videoVoteUserList.wxss
@@ -70,12 +70,22 @@ page{
 view.voteUserWrap:nth-child(1){
     margin-top:20rpx;
 }
-/* 更多数据 */
+/* 更多 */
 .moreData{
-    width:750rpx;
+    width:200rpx;
+    height:60rpx;
     font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
     color:#7b7b7b;
-    line-height:50rpx;
-    text-align:center;
+    background:#efefef;
     margin-top:20rpx;
 }
