--- a/pages/videos/manVideoList/manVideoList.wxss
+++ b/pages/videos/manVideoList/manVideoList.wxss
@@ -1,7 +1,7 @@
 @import '../../../utils/iconFont.wxss';
 page{
     background:#F2F2F2;
-    padding-bottom:110rpx;
+    padding-bottom:130rpx;
 }
 /* .manListWrap{
     width:750rpx;
@@ -121,4 +121,21 @@ page{
 }
 .contentMiddelDate text{
     color:#000;
+}
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
 }
